--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "utils",
   "version": "1.0.0",
-  "main": "dist/index.js",
+  "module": "dist/index.js",
   "author": "g770728y",
   "license": "MIT",
   "private": true,
@@ -14,7 +14,7 @@
     "@types/jest": "^24.0.15",
     "jest": "^24.8.0",
     "ts-jest": "^24.0.2",
-    "typescript": "^3.5.3"
+    "typescript": "^4.4.3"
   },
   "files": [
     "dist"
